src/objects/Provider_Networks__c.object
<CustomObject>
    <fields>
        <fullName>Case_Account_ProvID__c</fullName>
        <description>PPN-31138</description>
        <formula>IF((Contracting_Case__c != NULL &amp;&amp; isFromIndividual__c == True), Contracting_Case__r.Account.Prov_ID__c,  IF((Credentialing_Case__c != NULL &amp;&amp; isFromIndividual__c == True), Credentialing_Case__r.Account.Prov_ID__c,  IF((CounterSign__c != NULL &amp;&amp; isFromIndividual__c == True), CounterSign__r.Account.Prov_ID__c ,  
IF((Case_Number__c != NULL &amp;&amp; isFromIndividual__c == True), Case_Number__r.Account.Prov_ID__c, NULL) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Account ProvID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Details</relationshipLabel>
        <relationshipName>Network_Support_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>Case_Number__r.RecordType.Name</formula>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case_Number__r.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Grid_Code__c</fullName>
        <label>Comp Grid Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Grid_Effective_Date__c</fullName>
        <label>Comp Grid Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comp_Grid_End_Date__c</fullName>
        <label>Comp Grid End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracting_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracting Case</description>
        <label>Contracting Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Details</relationshipLabel>
        <relationshipName>Provider_Networks_Contracting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CounterSign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CounterSign</description>
        <label>CounterSign</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Details</relationshipLabel>
        <relationshipName>Provider_Details_CounterSign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cred_Status__c</fullName>
        <label>Cred Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Credentialing</fullName>
                </value>
                <value>
                    <fullName>No Credentialing Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentialing_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credentialing Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Details</relationshipLabel>
        <relationshipName>Provider_Details_Credentialing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desgnation_Effective_Date__c</fullName>
        <label>Desgnation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation_Code__c</fullName>
        <label>Designation Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation_End_Date__c</fullName>
        <label>Designation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Entity_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Entity Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Details</relationshipLabel>
        <relationshipName>Provider_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Advantage HMO</fullName>
                </value>
                <value>
                    <fullName>Blue Advantage PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Care Direct</fullName>
                </value>
                <value>
                    <fullName>Blue Choice Options</fullName>
                </value>
                <value>
                    <fullName>BlueChoice PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Choice PPO</fullName>
                </value>
                <value>
                    <fullName>BlueChoice PPO (BH)</fullName>
                </value>
                <value>
                    <fullName>Blue Choice PPO Preferred</fullName>
                </value>
                <value>
                    <fullName>Blue Choice PPO Preferred Ancillary</fullName>
                </value>
                <value>
                    <fullName>Blue Community HMO Dallas</fullName>
                </value>
                <value>
                    <fullName>Blue Community HMO Network</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Community Family Health Plan</fullName>
                </value>
                <value>
                    <fullName>Blue Essentials</fullName>
                </value>
                <value>
                    <fullName>Blue Focus Care</fullName>
                </value>
                <value>
                    <fullName>Blue Focus POS</fullName>
                </value>
                <value>
                    <fullName>BlueLincs HMO</fullName>
                </value>
                <value>
                    <fullName>Blue Options</fullName>
                </value>
                <value>
                    <fullName>Blue Precision HMO</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred</fullName>
                </value>
                <value>
                    <fullName>Blue Premier HMO</fullName>
                </value>
                <value>
                    <fullName>Blue Select PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Traditional</fullName>
                </value>
                <value>
                    <fullName>Caring Program</fullName>
                </value>
                <value>
                    <fullName>CHIP (Medicaid)</fullName>
                </value>
                <value>
                    <fullName>DNOA</fullName>
                </value>
                <value>
                    <fullName>Dual Eligible MMAI</fullName>
                </value>
                <value>
                    <fullName>Dual Eligible Special Needs Plan</fullName>
                </value>
                <value>
                    <fullName>Exclusive Provider Network</fullName>
                </value>
                <value>
                    <fullName>Facility - Blue Choice Designated PPO</fullName>
                </value>
                <value>
                    <fullName>Facility Blue Choice Designated PPO Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Code_Name_Detail__c</fullName>
        <label>Network Code/Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Network_Code_Name__c</fullName>
        <label>Network Code/Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Network_Load_Plan_Id__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PAR - Blue Traditional</fullName>
                </value>
                <value>
                    <fullName>PPO - Blue Choice PPO</fullName>
                </value>
                <value>
                    <fullName>EPP - Blue Preferred</fullName>
                </value>
                <value>
                    <fullName>OPA - Blue Select PPO</fullName>
                </value>
                <value>
                    <fullName>SPN - Plan 65 Select</fullName>
                </value>
                <value>
                    <fullName>CAR - Caring Program</fullName>
                </value>
                <value>
                    <fullName>HMO - BlueLincs HMO</fullName>
                </value>
                <value>
                    <fullName>BVP - Blue Advantage PPO</fullName>
                </value>
                <value>
                    <fullName>ADV - Blue Advantage HMO</fullName>
                </value>
                <value>
                    <fullName>BAV - Blue Precision HMO</fullName>
                </value>
                <value>
                    <fullName>BAV - Blue Advantage HMO</fullName>
                </value>
                <value>
                    <fullName>BCA - BlueChoice PPO</fullName>
                </value>
                <value>
                    <fullName>BCE - Blue Choice PPO Preferred</fullName>
                </value>
                <value>
                    <fullName>BCO - Blue Choice Options</fullName>
                </value>
                <value>
                    <fullName>BCP - BlueChoice PPO (BH)</fullName>
                </value>
                <value>
                    <fullName>BCS - Professional Blue Choice PPO</fullName>
                </value>
                <value>
                    <fullName>BDF - Blue Choice PPO Preferred Ancillary</fullName>
                </value>
                <value>
                    <fullName>BDS - Professional Designated Blue Choice PPO</fullName>
                </value>
                <value>
                    <fullName>BFC - Blue Focus Care</fullName>
                </value>
                <value>
                    <fullName>BHD - Blue Care Direct</fullName>
                </value>
                <value>
                    <fullName>BLC - Blue Focus POS</fullName>
                </value>
                <value>
                    <fullName>CHP - CHIP (Medicaid)</fullName>
                </value>
                <value>
                    <fullName>CND - Blue Community HMO Dallas</fullName>
                </value>
                <value>
                    <fullName>CNN - Blue Community HMO Network</fullName>
                </value>
                <value>
                    <fullName>DCC - Facility - Blue Choice PPO</fullName>
                </value>
                <value>
                    <fullName>DDC - Facility - Blue Choice Designated PPO</fullName>
                </value>
                <value>
                    <fullName>DEB - DNOA</fullName>
                </value>
                <value>
                    <fullName>DUE - Dual Eligible MMAI</fullName>
                </value>
                <value>
                    <fullName>EDF - Facility Blue Choice Designated PPO Preferred</fullName>
                </value>
                <value>
                    <fullName>EDS - Professional Designated Blue Choice PPO Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Load_Plan_Id__c</fullName>
        <label>Plan Id</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                </value>
                <value>
                    <fullName>MT1</fullName>
                </value>
                <value>
                    <fullName>NM1</fullName>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Name__c</fullName>
        <label>Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ADV</fullName>
                </value>
                <value>
                    <fullName>BAV</fullName>
                </value>
                <value>
                    <fullName>BCA</fullName>
                </value>
                <value>
                    <fullName>BCE</fullName>
                </value>
                <value>
                    <fullName>BCO</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>BDF</fullName>
                </value>
                <value>
                    <fullName>BDS</fullName>
                </value>
                <value>
                    <fullName>BFC</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BLC</fullName>
                </value>
                <value>
                    <fullName>BVP</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>CHP</fullName>
                </value>
                <value>
                    <fullName>CND</fullName>
                </value>
                <value>
                    <fullName>CNN</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>DDC</fullName>
                </value>
                <value>
                    <fullName>DEB</fullName>
                </value>
                <value>
                    <fullName>DUE</fullName>
                </value>
                <value>
                    <fullName>EDF</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>EPN</fullName>
                </value>
                <value>
                    <fullName>EPP</fullName>
                </value>
                <value>
                    <fullName>FEA</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HGT</fullName>
                </value>
                <value>
                    <fullName>HME</fullName>
                </value>
                <value>
                    <fullName>HMH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Networks_Effective_Date__c</fullName>
        <label>Network Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFIN_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PFIN Case</description>
        <label>PFIN Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Details</relationshipLabel>
        <relationshipName>Provider_Networks_PFIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFIN__c</fullName>
        <description>This field created to hold the PFIN data available on the Case object. 
US No: PPN-20704</description>
        <formula>Case_Number__r.MC_PFIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PFIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFIN_onBoarding__c</fullName>
        <label>PFIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_code__c</fullName>
        <label>Panel code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepting</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Existing Patients Only</fullName>
                </value>
                <value>
                    <fullName>Existing &amp; Family only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paper_Cred_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Cred Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Provider_Id__c</fullName>
        <label>Prior Provider Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prov_ID__c</fullName>
        <description>Prov ID</description>
        <label>Prov ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderName__c</fullName>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_Network_Reson__c</fullName>
        <label>Remove Network Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles_Code__c</fullName>
        <label>Role Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>PSP</fullName>
                </value>
                <value>
                    <fullName>PCP/PSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seleted_Network__c</fullName>
        <label>Seleted Network</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Provider Details Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cred Approved</fullName>
                </value>
                <value>
                    <fullName>Cred Denied</fullName>
                </value>
                <value>
                    <fullName>Provisionally Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>countersignGroupManual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>countersignGroupManual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFirstProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFirstProvider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFromIndividual__c</fullName>
        <formula>OR(
 AND(NOT(ISBLANK(PFIN_Case__c)),ISPICKVAL(PFIN_Case__r.Completing_the_form_for__c, &apos;Individual&apos;)),
 AND(NOT(ISBLANK(Contracting_Case__c)),ISPICKVAL(Contracting_Case__r.Completing_the_form_for__c, &apos;Individual&apos;)),
 AND(NOT(ISBLANK(Credentialing_Case__c)),ISPICKVAL(Credentialing_Case__r.Completing_the_form_for__c, &apos;Individual&apos;)),
AND(NOT(ISBLANK(CounterSign__c)),ISPICKVAL(CounterSign__r.Completing_the_form_for__c, &apos;Individual&apos;))
)</formula>
        <label>isFromIndividual</label>
        <type>Checkbox</type>
    </fields>
    <label>Provider Details</label>
    <nameField>
        <displayFormat>PN-{0}</displayFormat>
        <label>Provider Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Details</pluralLabel>
    <recordTypes>
        <fullName>ADC</fullName>
        <active>true</active>
        <description>ADC</description>
        <label>ADC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contracting_Onboarding</fullName>
        <active>true</active>
        <description>Contracting Onboarding</description>
        <label>Contracting Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>CounterSign</fullName>
        <active>true</active>
        <description>CounterSign</description>
        <label>CounterSign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credentialing</fullName>
        <active>true</active>
        <label>Credentialing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Entity</fullName>
        <active>true</active>
        <label>Master Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network</fullName>
        <active>true</active>
        <label>Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onboarding</fullName>
        <active>true</active>
        <description>Onboarding</description>
        <label>Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>PFIN_Onboarding</fullName>
        <active>true</active>
        <description>PFIN Onboarding</description>
        <label>PFIN Onboarding</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_update_child_when_parent_is_close</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(Case_Status__c, &apos;Closed&apos;),  Case_Record_Type__c == &apos;Network Load&apos;)</errorConditionFormula>
        <errorMessage>Cannot insert/update networks for closed Network case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_ProvId_aganist_Case</fullName>
        <active>true</active>
        <description>PPN-31138</description>
        <errorConditionFormula>AND( 
OR($RecordType.Name = &apos;Contracting Onboarding&apos;,
$RecordType.Name = &apos;CounterSign&apos;,
$RecordType.Name =&apos;Credentialing&apos;,
$RecordType.Name = &apos;Network&apos; ),
OR(ISCHANGED(Prov_ID__c),
ISNEW()),
SkipValidation__c = False,
isFromIndividual__c = True,
Case_Account_ProvID__c != NULL,
Case_Account_ProvID__c != Prov_ID__c
)</errorConditionFormula>
        <errorMessage>Invalid Prov ID, Kindly update the right account name for right Prov ID to get auto populate</errorMessage>
    </validationRules>
</CustomObject>